push to SDET21Repo

--- a/ComcastSeleniumFrm/test-output/old/Default suite/groups.html
+++ b/ComcastSeleniumFrm/test-output/old/Default suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoketest</td><td>oragTest.createOrganizationTest()[pri:0, instance:com.comcast.organization.oragTest@16610890]<br/></td></tr>
+<tr><td>regressiontest</td><td>oragTest.delectorgTest()[pri:0, instance:com.comcast.organization.oragTest@16610890]<br/>oragTest.createOrgWithleadTest()[pri:0, instance:com.comcast.organization.oragTest@16610890]<br/></td></tr>
+</table>
