--- a/ComcastSeleniumFrm/test-output/old/Default suite/classes.html
+++ b/ComcastSeleniumFrm/test-output/old/Default suite/classes.html
@@ -4,23 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.comcast.Contact.contactTest</td>
+<td>com.comcast.organization.oragTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createContactTest</td>
-<td>&nbsp;</td></tr>
+<td>delectorgTest</td>
+<td>regressiontest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>createContactWithOrgTest</td>
-<td>&nbsp;</td></tr>
+<td>createOrganizationTest</td>
+<td>Smoketest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>delectContactTest</td>
-<td>&nbsp;</td></tr>
+<td>createOrgWithleadTest</td>
+<td>regressiontest </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
